# 3rdpartypublic

./: bb64_complete.bat  bbminimal32.bat  bbminimal64-vs2010.bat  bbminimal64.bat  svn_ext_val.txt
AVTGigESDK/: README.txt
AVTGigESDK/bin-pc/x64/: CLIpConfig  libPvJNI.dylib
AVTGigESDK/bin-pc/x86/: CLIpConfig  libPvJNI.dylib
AVTGigESDK_Win/GigESDK/modules/: ImageLib.sln  ImageLib.vcproj
FreeImage/: Makefile.am  Makefile.fiposx  Makefile.in  Makefile.osx  configure  configure.ac  fipMakefile.srcs
FreeImage/Source/: FreeImage.h  Makefile.am  Makefile.in
FreeImage/Source/FreeImage/: PluginRAW.cpp
FreeImage/Source/OpenEXR/IlmImf/: ImfHuf.cpp
FreeImage/TestAPI/: Makefile.am  Makefile.in
FreeImage/Wrapper/FreeImagePlus/: Makefile.am  Makefile.in
FreeImage/Wrapper/FreeImagePlus/test/: fipTest.h
FreeImage/autom4te.cache/: output.2  requests  traces.0  traces.1  traces.2
ImageJLauncher/: ImageJ.dpr
JavaLauncher/: ImageJ.dproj  ImageJLauncher.txt  Readme.txt  Shared.pas
Motic/: MoticImageDevicesProxy.h  MoticMicroscopeSDK.h
Motic/x64/: MMSDK.lib  MoticImageDevicesProxy.lib
Motic/x86/: MMSDK.lib  MoticImageDevicesProxy.h  MoticImageDevicesProxy.lib
boost-versions/: build-1_55_0-VS2010.bat
boost-versions/boost_1_55_0-lib-Win32/: libboost_atomic-vc100-mt-1_55.lib  libboost_atomic-vc100-mt-gd-1_55.lib  libboost_atomic-vc100-mt-s-1_55.lib  libboost_atomic-vc100-mt-sgd-1_55.lib  libboost_chrono-vc100-mt-1_55.lib  libboost_chrono-vc100-mt-gd-1_55.lib  libboost_chrono-vc100-mt-s-1_55.lib  libboost_chrono-vc100-mt-sgd-1_55.lib  libboost_date_time-vc100-mt-1_55.lib  libboost_date_time-vc100-mt-gd-1_55.lib  libboost_date_time-vc100-mt-s-1_55.lib  libboost_date_time-vc100-mt-sgd-1_55.lib  libboost_filesystem-vc100-mt-1_55.lib  libboost_filesystem-vc100-mt-s-1_55.lib  libboost_system-vc100-mt-1_55.lib  libboost_system-vc100-mt-gd-1_55.lib  libboost_system-vc100-mt-s-1_55.lib  libboost_system-vc100-mt-sgd-1_55.lib  libboost_thread-vc100-mt-1_55.lib  libboost_thread-vc100-mt-gd-1_55.lib  libboost_thread-vc100-mt-s-1_55.lib  libboost_thread-vc100-mt-sgd-1_55.lib  libboost_timer-vc100-mt-1_55.lib  libboost_timer-vc100-mt-gd-1_55.lib  libboost_timer-vc100-mt-s-1_55.lib  libboost_timer-vc100-mt-sgd-1_55.lib
boost-versions/boost_1_55_0-lib-x64/: libboost_atomic-vc100-mt-1_55.lib  libboost_atomic-vc100-mt-gd-1_55.lib  libboost_atomic-vc100-mt-s-1_55.lib  libboost_atomic-vc100-mt-sgd-1_55.lib  libboost_chrono-vc100-mt-1_55.lib  libboost_chrono-vc100-mt-gd-1_55.lib  libboost_chrono-vc100-mt-s-1_55.lib  libboost_chrono-vc100-mt-sgd-1_55.lib  libboost_date_time-vc100-mt-1_55.lib  libboost_date_time-vc100-mt-gd-1_55.lib  libboost_date_time-vc100-mt-s-1_55.lib  libboost_date_time-vc100-mt-sgd-1_55.lib  libboost_filesystem-vc100-mt-1_55.lib  libboost_filesystem-vc100-mt-s-1_55.lib  libboost_system-vc100-mt-1_55.lib  libboost_system-vc100-mt-gd-1_55.lib  libboost_system-vc100-mt-s-1_55.lib  libboost_system-vc100-mt-sgd-1_55.lib  libboost_thread-vc100-mt-1_55.lib  libboost_thread-vc100-mt-gd-1_55.lib  libboost_thread-vc100-mt-s-1_55.lib  libboost_thread-vc100-mt-sgd-1_55.lib  libboost_timer-vc100-mt-1_55.lib  libboost_timer-vc100-mt-gd-1_55.lib  libboost_timer-vc100-mt-s-1_55.lib  libboost_timer-vc100-mt-sgd-1_55.lib
boost/stage_Win32/lib/: libboost_date_time-vc100-mt-gd-1_46_1.lib  libboost_date_time-vc100-mt-gd.lib  libboost_date_time-vc100-mt-s-1_46_1.lib  libboost_date_time-vc100-mt-sgd-1_46_1.lib  libboost_date_time-vc100-mt.lib  libboost_date_time-vc90-mt-1_46_1.lib  libboost_date_time-vc90-mt-gd.lib  libboost_system-vc100-mt-gd-1_46_1.lib  libboost_system-vc100-mt-gd.lib  libboost_system-vc100-mt-s-1_46_1.lib  libboost_system-vc100-mt-sgd-1_46_1.lib  libboost_system-vc100-mt-sgd.lib  libboost_system-vc100-mt.lib  libboost_system-vc90-mt-1_46_1.lib  libboost_system-vc90-mt-gd.lib  libboost_system-vc90-mt-s.lib  libboost_thread-vc100-mt-1_46_1.lib  libboost_thread-vc100-mt-gd-1_46_1.lib  libboost_thread-vc100-mt-gd.lib  libboost_thread-vc100-mt-s-1_46_1.lib  libboost_thread-vc100-mt-s.lib  libboost_thread-vc100-mt-sgd-1_46_1.lib  libboost_thread-vc100-mt.lib  libboost_thread-vc90-mt-1_46_1.lib  libboost_thread-vc90-mt-gd.lib  libboost_thread-vc90-mt-s-1_46_1.lib  libboost_thread-vc90-mt-sgd-1_46_1.lib
boost/stage_x64/lib/: libboost_date_time-vc100-mt-gd-1_46_1.lib  libboost_date_time-vc100-mt-s-1_46_1.lib  libboost_date_time-vc100-mt-sgd-1_46_1.lib  libboost_date_time-vc100-mt.lib  libboost_date_time-vc90-mt-1_46_1.lib  libboost_date_time-vc90-mt-gd-1_46_1.lib  libboost_date_time-vc90-mt-gd.lib  libboost_date_time-vc90-mt-s-1_46_1.lib  libboost_date_time-vc90-mt-sgd.lib  libboost_date_time-vc90-mt.lib  libboost_system-vc100-mt-1_46_1.lib  libboost_system-vc100-mt-gd.lib  libboost_system-vc100-mt-s-1_46_1.lib  libboost_system-vc100-mt-sgd-1_46_1.lib  libboost_system-vc100-mt-sgd.lib  libboost_system-vc90-mt-1_46_1.lib  libboost_system-vc90-mt-gd.lib  libboost_system-vc90-mt-s-1_46_1.lib  libboost_system-vc90-mt-sgd.lib  libboost_thread-vc100-mt-1_46_1.lib  libboost_thread-vc100-mt-gd.lib  libboost_thread-vc100-mt-s-1_46_1.lib  libboost_thread-vc100-mt-sgd.lib  libboost_thread-vc100-mt.lib  libboost_thread-vc90-mt-1_46_1.lib  libboost_thread-vc90-mt-gd-1_46_1.lib  libboost_thread-vc90-mt-gd.lib  libboost_thread-vc90-mt-s.lib  libboost_thread-vc90-mt-sgd-1_46_1.lib  libboost_thread-vc90-mt-sgd.lib  libboost_thread-vc90-mt.lib
classext/: JARVersionsAndSources.txt
dc1394-drivers/dc1394/include/: stdint.h
google/protobuf-2.5.0_build/: readme.txt
hidapi/build-3a66d4e513-patched/: readme.txt
libdc1394/libdc1394-2.2.1-bin/: readme.txt
picard/: PiUsb.def  PiUsb.h  PiUsb.lib
picard/4D-Stage DLL and Docs/: PiUsb.def  PiUsb.h  PiUsb.lib
sourceext/ij_source/: build.xml
steinbach/: no_sillywarnings_please.h
zlib/: build_x64.bat  build_x86.bat  clean.bat  definevcvars.bat  definevcvars_x64buildmachine.bat  whatisthis.txt
zlib/bin_Win32/: zdll.exp  zdll.lib  zlib.lib
zlib/bin_x64/: zdll.lib  zlib.lib
zlib_build/VS2008/: build_zlib.bat
(+208 files in other folders)
