# Process this file with autoconf to produce a configure script.
AC_INIT([FreeImage], [3.15.4])
AC_CONFIG_AUX_DIR([config])
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE([foreign])
AC_CONFIG_FILES([Makefile Source/Makefile Wrapper/FreeImagePlus/Makefile TestAPI/Makefile])
AC_LANG([C++])
AC_PROG_CC
AC_PROG_CXX
AC_PROG_LIBTOOL
AC_OUTPUT
# not truncated
