lib_LTLIBRARIES=libfreeimage.la
include_HEADERS=FreeImage.h

libfreeimage_la_SOURCES = \
  ./FreeImage/MNGHelper.cpp  \
  ./FreeImage/PluginJNG.cpp  \
  ./DeprecationManager/Deprecated.cpp  \
  ./DeprecationManager/DeprecationMgr.cpp  \
  ./FreeImage/BitmapAccess.cpp  \
  ./FreeImage/CacheFile.cpp  \
  ./FreeImage/ColorLookup.cpp  \
  ./FreeImage/Conversion.cpp  \
  ./FreeImage/Conversion16_555.cpp  \
  ./FreeImage/Conversion16_565.cpp  \
  ./FreeImage/Conversion24.cpp  \
  ./FreeImage/Conversion32.cpp  \
  ./FreeImage/Conversion4.cpp  \
  ./FreeImage/Conversion8.cpp  \
  ./FreeImage/ConversionFloat.cpp  \
  ./FreeImage/ConversionRGB16.cpp  \
  ./FreeImage/ConversionRGBF.cpp  \
  ./FreeImage/ConversionType.cpp  \
  ./FreeImage/ConversionUINT16.cpp  \
  ./FreeImage/FreeImage.cpp  \
  ./FreeImage/FreeImageC.c  \
  ./FreeImage/FreeImageIO.cpp  \
  ./FreeImage/GetType.cpp  \
  ./FreeImage/Halftoning.cpp  \
  ./FreeImage/J2KHelper.cpp  \
  ./FreeImage/MemoryIO.cpp  \
  ./FreeImage/MultiPage.cpp  \
  ./FreeImage/NNQuantizer.cpp  \
  ./FreeImage/PSDParser.cpp  \
  ./FreeImage/PixelAccess.cpp  \
  ./FreeImage/Plugin.cpp  \
  ./FreeImage/PluginBMP.cpp  \
  ./FreeImage/PluginCUT.cpp  \
  ./FreeImage/PluginDDS.cpp  \
  ./FreeImage/PluginEXR.cpp  \
  ./FreeImage/PluginG3.cpp  \
  ./FreeImage/PluginGIF.cpp  \
  ./FreeImage/PluginHDR.cpp  \
  ./FreeImage/PluginICO.cpp  \
  ./FreeImage/PluginIFF.cpp  \
  ./FreeImage/PluginJ2K.cpp  \
  ./FreeImage/PluginJP2.cpp  \
  ./FreeImage/PluginJPEG.cpp  \
  ./FreeImage/PluginKOALA.cpp  \
  ./FreeImage/PluginMNG.cpp  \
  ./FreeImage/PluginPCD.cpp  \
  ./FreeImage/PluginPCX.cpp  \
  ./FreeImage/PluginPFM.cpp  \
  ./FreeImage/PluginPICT.cpp  \
  ./FreeImage/PluginPNG.cpp  \
  ./FreeImage/PluginPNM.cpp  \
  ./FreeImage/PluginPSD.cpp  \
  ./FreeImage/PluginRAS.cpp  \
  ./FreeImage/PluginRAW.cpp  \
  ./FreeImage/PluginSGI.cpp  \
  ./FreeImage/PluginTARGA.cpp  \
  ./FreeImage/PluginTIFF.cpp  \
  ./FreeImage/PluginWBMP.cpp  \
  ./FreeImage/PluginXBM.cpp  \
  ./FreeImage/PluginXPM.cpp  \
  ./FreeImage/TIFFLogLuv.cpp  \
  ./FreeImage/ToneMapping.cpp  \
  ./FreeImage/WuQuantizer.cpp  \
  ./FreeImage/ZLibInterface.cpp  \
  ./FreeImage/tmoColorConvert.cpp  \
  ./FreeImage/tmoDrago03.cpp  \
  ./FreeImage/tmoFattal02.cpp  \
  ./FreeImage/tmoReinhard05.cpp  \
  ./FreeImageToolkit/BSplineRotate.cpp  \
  ./FreeImageToolkit/Background.cpp  \
  ./FreeImageToolkit/Channels.cpp  \
  ./FreeImageToolkit/ClassicRotate.cpp  \
  ./FreeImageToolkit/Colors.cpp  \
  ./FreeImageToolkit/CopyPaste.cpp  \
  ./FreeImageToolkit/Display.cpp  \
  ./FreeImageToolkit/Flip.cpp  \
  ./FreeImageToolkit/JPEGTransform.cpp  \
  ./FreeImageToolkit/MultigridPoissonSolver.cpp  \
  ./FreeImageToolkit/Rescale.cpp  \
  ./FreeImageToolkit/Resize.cpp  \
  ./Metadata/Exif.cpp  \
  ./Metadata/FIRational.cpp  \
  ./Metadata/FreeImageTag.cpp  \
  ./Metadata/IPTC.cpp  \
  ./Metadata/TagConversion.cpp  \
  ./Metadata/TagLib.cpp  \
  ./Metadata/XTIFF.cpp  \
  ./LibJPEG/./jaricom.c  \
  ./LibJPEG/./jcarith.c  \
  ./LibJPEG/./jdarith.c  \
  ./LibJPEG/jcapimin.c  \
  ./LibJPEG/jcapistd.c  \
  ./LibJPEG/jccoefct.c  \
  ./LibJPEG/jccolor.c  \
  ./LibJPEG/jcdctmgr.c  \
  ./LibJPEG/jchuff.c  \
  ./LibJPEG/jcinit.c  \
  ./LibJPEG/jcmainct.c  \
  ./LibJPEG/jcmarker.c  \
  ./LibJPEG/jcmaster.c  \
  ./LibJPEG/jcomapi.c  \
  ./LibJPEG/jcparam.c  \
  ./LibJPEG/jcprepct.c  \
  ./LibJPEG/jcsample.c  \
  ./LibJPEG/jctrans.c  \
  ./LibJPEG/jdapimin.c  \
  ./LibJPEG/jdapistd.c  \
  ./LibJPEG/jdatadst.c  \
  ./LibJPEG/jdatasrc.c  \
  ./LibJPEG/jdcoefct.c  \
  ./LibJPEG/jdcolor.c  \
  ./LibJPEG/jddctmgr.c  \
  ./LibJPEG/jdhuff.c  \
  ./LibJPEG/jdinput.c  \
  ./LibJPEG/jdmainct.c  \
  ./LibJPEG/jdmarker.c  \
  ./LibJPEG/jdmaster.c  \
  ./LibJPEG/jdmerge.c  \
  ./LibJPEG/jdpostct.c  \
  ./LibJPEG/jdsample.c  \
  ./LibJPEG/jdtrans.c  \
  ./LibJPEG/jerror.c  \
  ./LibJPEG/jfdctflt.c  \
  ./LibJPEG/jfdctfst.c  \
  ./LibJPEG/jfdctint.c  \
  ./LibJPEG/jidctflt.c  \
  ./LibJPEG/jidctfst.c  \
  ./LibJPEG/jidctint.c  \
  ./LibJPEG/jmemmgr.c  \
  ./LibJPEG/jmemnobs.c  \
  ./LibJPEG/jquant1.c  \
  ./LibJPEG/jquant2.c  \
  ./LibJPEG/jutils.c  \
  ./LibJPEG/transupp.c  \
  ./LibOpenJPEG/./cidx_manager.c  \
  ./LibOpenJPEG/./phix_manager.c  \
  ./LibOpenJPEG/./ppix_manager.c  \
  ./LibOpenJPEG/./thix_manager.c  \
  ./LibOpenJPEG/./tpix_manager.c  \
  ./LibOpenJPEG/bio.c  \
  ./LibOpenJPEG/cio.c  \
  ./LibOpenJPEG/dwt.c  \
  ./LibOpenJPEG/event.c  \
  ./LibOpenJPEG/image.c  \
  ./LibOpenJPEG/j2k.c  \
  ./LibOpenJPEG/j2k_lib.c  \
  ./LibOpenJPEG/jp2.c  \
  ./LibOpenJPEG/jpt.c  \
  ./LibOpenJPEG/mct.c  \
  ./LibOpenJPEG/mqc.c  \
  ./LibOpenJPEG/openjpeg.c  \
  ./LibOpenJPEG/pi.c  \
  ./LibOpenJPEG/raw.c  \
  ./LibOpenJPEG/t1.c  \
  ./LibOpenJPEG/t2.c  \
  ./LibOpenJPEG/tcd.c  \
  ./LibOpenJPEG/tgt.c  \
  ./LibPNG/./png.c  \
  ./LibPNG/./pngerror.c  \
  ./LibPNG/./pngget.c  \
  ./LibPNG/./pngmem.c  \
  ./LibPNG/./pngpread.c  \
  ./LibPNG/./pngread.c  \
  ./LibPNG/./pngrio.c  \
  ./LibPNG/./pngrtran.c  \
  ./LibPNG/./pngrutil.c  \
  ./LibPNG/./pngset.c  \
  ./LibPNG/./pngtrans.c  \
  ./LibPNG/./pngwio.c  \
  ./LibPNG/./pngwrite.c  \
  ./LibPNG/./pngwtran.c  \
  ./LibPNG/./pngwutil.c  \
  ./LibRawLite/./internal/dcraw_common.cpp  \
  ./LibRawLite/./internal/dcraw_fileio.cpp  \
  ./LibRawLite/./internal/demosaic_packs.cpp  \
  ./LibRawLite/./src/libraw_c_api.cpp  \
  ./LibRawLite/./src/libraw_cxx.cpp  \
  ./LibRawLite/./src/libraw_datastream.cpp  \
  ./LibTIFF4/./tif_aux.c  \
  ./LibTIFF4/./tif_close.c  \
  ./LibTIFF4/./tif_codec.c  \
  ./LibTIFF4/./tif_color.c  \
  ./LibTIFF4/./tif_compress.c  \
  ./LibTIFF4/./tif_dir.c  \
  ./LibTIFF4/./tif_dirinfo.c  \
  ./LibTIFF4/./tif_dirread.c  \
  ./LibTIFF4/./tif_dirwrite.c  \
  ./LibTIFF4/./tif_dumpmode.c  \
  ./LibTIFF4/./tif_error.c  \
  ./LibTIFF4/./tif_extension.c  \
  ./LibTIFF4/./tif_fax3.c  \
  ./LibTIFF4/./tif_fax3sm.c  \
  ./LibTIFF4/./tif_flush.c  \
  ./LibTIFF4/./tif_getimage.c  \
  ./LibTIFF4/./tif_jpeg.c  \
  ./LibTIFF4/./tif_luv.c  \
  ./LibTIFF4/./tif_lzma.c  \
  ./LibTIFF4/./tif_lzw.c  \
  ./LibTIFF4/./tif_next.c  \
  ./LibTIFF4/./tif_ojpeg.c  \
  ./LibTIFF4/./tif_open.c  \
  ./LibTIFF4/./tif_packbits.c  \
  ./LibTIFF4/./tif_pixarlog.c  \
  ./LibTIFF4/./tif_predict.c  \
  ./LibTIFF4/./tif_print.c  \
  ./LibTIFF4/./tif_read.c  \
  ./LibTIFF4/./tif_strip.c  \
  ./LibTIFF4/./tif_swab.c  \
  ./LibTIFF4/./tif_thunder.c  \
  ./LibTIFF4/./tif_tile.c  \
  ./LibTIFF4/./tif_version.c  \
  ./LibTIFF4/./tif_warning.c  \
  ./LibTIFF4/./tif_write.c  \
  ./LibTIFF4/./tif_zip.c  \
  ./OpenEXR/./Half/half.cpp  \
  ./OpenEXR/./Iex/IexBaseExc.cpp  \
  ./OpenEXR/./Iex/IexThrowErrnoExc.cpp  \
  ./OpenEXR/./IlmImf/ImfAttribute.cpp  \
  ./OpenEXR/./IlmImf/ImfB44Compressor.cpp  \
  ./OpenEXR/./IlmImf/ImfBoxAttribute.cpp  \
  ./OpenEXR/./IlmImf/ImfCRgbaFile.cpp  \
  ./OpenEXR/./IlmImf/ImfChannelList.cpp  \
  ./OpenEXR/./IlmImf/ImfChannelListAttribute.cpp  \
  ./OpenEXR/./IlmImf/ImfChromaticities.cpp  \
  ./OpenEXR/./IlmImf/ImfChromaticitiesAttribute.cpp  \
  ./OpenEXR/./IlmImf/ImfCompressionAttribute.cpp  \
  ./OpenEXR/./IlmImf/ImfCompressor.cpp  \
  ./OpenEXR/./IlmImf/ImfConvert.cpp  \
  ./OpenEXR/./IlmImf/ImfDoubleAttribute.cpp  \
  ./OpenEXR/./IlmImf/ImfEnvmap.cpp  \
  ./OpenEXR/./IlmImf/ImfEnvmapAttribute.cpp  \
  ./OpenEXR/./IlmImf/ImfFloatAttribute.cpp  \
  ./OpenEXR/./IlmImf/ImfFrameBuffer.cpp  \
  ./OpenEXR/./IlmImf/ImfFramesPerSecond.cpp  \
  ./OpenEXR/./IlmImf/ImfHeader.cpp  \
  ./OpenEXR/./IlmImf/ImfHuf.cpp  \
  ./OpenEXR/./IlmImf/ImfIO.cpp  \
  ./OpenEXR/./IlmImf/ImfInputFile.cpp  \
  ./OpenEXR/./IlmImf/ImfIntAttribute.cpp  \
  ./OpenEXR/./IlmImf/ImfKeyCode.cpp  \
  ./OpenEXR/./IlmImf/ImfKeyCodeAttribute.cpp  \
  ./OpenEXR/./IlmImf/ImfLineOrderAttribute.cpp  \
  ./OpenEXR/./IlmImf/ImfLut.cpp  \
  ./OpenEXR/./IlmImf/ImfMatrixAttribute.cpp  \
  ./OpenEXR/./IlmImf/ImfMisc.cpp  \
  ./OpenEXR/./IlmImf/ImfOpaqueAttribute.cpp  \
  ./OpenEXR/./IlmImf/ImfOutputFile.cpp  \
  ./OpenEXR/./IlmImf/ImfPizCompressor.cpp  \
  ./OpenEXR/./IlmImf/ImfPreviewImage.cpp  \
  ./OpenEXR/./IlmImf/ImfPreviewImageAttribute.cpp  \
  ./OpenEXR/./IlmImf/ImfPxr24Compressor.cpp  \
  ./OpenEXR/./IlmImf/ImfRational.cpp  \
  ./OpenEXR/./IlmImf/ImfRationalAttribute.cpp  \
  ./OpenEXR/./IlmImf/ImfRgbaFile.cpp  \
  ./OpenEXR/./IlmImf/ImfRgbaYca.cpp  \
  ./OpenEXR/./IlmImf/ImfRleCompressor.cpp  \
  ./OpenEXR/./IlmImf/ImfScanLineInputFile.cpp  \
  ./OpenEXR/./IlmImf/ImfStandardAttributes.cpp  \
  ./OpenEXR/./IlmImf/ImfStdIO.cpp  \
  ./OpenEXR/./IlmImf/ImfStringAttribute.cpp  \
  ./OpenEXR/./IlmImf/ImfStringVectorAttribute.cpp  \
  ./OpenEXR/./IlmImf/ImfTestFile.cpp  \
  ./OpenEXR/./IlmImf/ImfThreading.cpp  \
  ./OpenEXR/./IlmImf/ImfTileDescriptionAttribute.cpp  \
  ./OpenEXR/./IlmImf/ImfTileOffsets.cpp  \
  ./OpenEXR/./IlmImf/ImfTiledInputFile.cpp  \
  ./OpenEXR/./IlmImf/ImfTiledMisc.cpp  \
  ./OpenEXR/./IlmImf/ImfTiledOutputFile.cpp  \
  ./OpenEXR/./IlmImf/ImfTiledRgbaFile.cpp  \
  ./OpenEXR/./IlmImf/ImfTimeCode.cpp  \
  ./OpenEXR/./IlmImf/ImfTimeCodeAttribute.cpp  \
  ./OpenEXR/./IlmImf/ImfVecAttribute.cpp  \
  ./OpenEXR/./IlmImf/ImfVersion.cpp  \
  ./OpenEXR/./IlmImf/ImfWav.cpp  \
  ./OpenEXR/./IlmImf/ImfZipCompressor.cpp  \
  ./OpenEXR/./IlmThread/IlmThread.cpp  \
  ./OpenEXR/./IlmThread/IlmThreadMutex.cpp  \
  ./OpenEXR/./IlmThread/IlmThreadPool.cpp  \
  ./OpenEXR/./IlmThread/IlmThreadSemaphore.cpp  \
  ./OpenEXR/./Imath/ImathBox.cpp  \
  ./OpenEXR/./Imath/ImathColorAlgo.cpp  \
  ./OpenEXR/./Imath/ImathFun.cpp  \
  ./OpenEXR/./Imath/ImathMatrixAlgo.cpp  \
  ./OpenEXR/./Imath/ImathRandom.cpp  \
  ./OpenEXR/./Imath/ImathShear.cpp  \
  ./OpenEXR/./Imath/ImathVec.cpp  \
  ./ZLib/./adler32.c  \
  ./ZLib/./compress.c  \
  ./ZLib/./crc32.c  \
  ./ZLib/./deflate.c  \
  ./ZLib/./gzclose.c  \
  ./ZLib/./gzlib.c  \
  ./ZLib/./gzread.c  \
  ./ZLib/./gzwrite.c  \
  ./ZLib/./infback.c  \
  ./ZLib/./inffast.c  \
  ./ZLib/./inflate.c  \
  ./ZLib/./inftrees.c  \
  ./ZLib/./trees.c  \
  ./ZLib/./uncompr.c  \
  ./ZLib/./zutil.c  \
  ./CacheFile.h  \
  ./DeprecationManager/DeprecationMgr.h  \
  ./FreeImage.h  \
  ./FreeImage/PSDParser.h  \
  ./FreeImageIO.h  \
  ./FreeImageToolkit/Filters.h  \
  ./FreeImageToolkit/Resize.h  \
  ./LibJPEG/cderror.h  \
  ./LibJPEG/cdjpeg.h  \
  ./LibJPEG/jconfig.h  \
  ./LibJPEG/jdct.h  \
  ./LibJPEG/jerror.h  \
  ./LibJPEG/jinclude.h  \
  ./LibJPEG/jmemsys.h  \
  ./LibJPEG/jmorecfg.h  \
  ./LibJPEG/jpegint.h  \
  ./LibJPEG/jpeglib.h  \
  ./LibJPEG/jversion.h  \
  ./LibJPEG/transupp.h  \
  ./LibMNG/libmng.h  \
  ./LibMNG/libmng_chunk_descr.h  \
  ./LibMNG/libmng_chunk_io.h  \
  ./LibMNG/libmng_chunk_prc.h  \
  ./LibMNG/libmng_chunks.h  \
  ./LibMNG/libmng_cms.h  \
  ./LibMNG/libmng_conf.h  \
  ./LibMNG/libmng_data.h  \
  ./LibMNG/libmng_display.h  \
  ./LibMNG/libmng_dither.h  \
  ./LibMNG/libmng_error.h  \
  ./LibMNG/libmng_filter.h  \
  ./LibMNG/libmng_jpeg.h  \
  ./LibMNG/libmng_memory.h  \
  ./LibMNG/libmng_object_prc.h  \
  ./LibMNG/libmng_objects.h  \
  ./LibMNG/libmng_pixels.h  \
  ./LibMNG/libmng_read.h  \
  ./LibMNG/libmng_trace.h  \
  ./LibMNG/libmng_types.h  \
  ./LibMNG/libmng_write.h  \
  ./LibMNG/libmng_zlib.h  \
  ./LibOpenJPEG/bio.h  \
  ./LibOpenJPEG/cidx_manager.h  \
  ./LibOpenJPEG/cio.h  \
  ./LibOpenJPEG/dwt.h  \
  ./LibOpenJPEG/event.h  \
  ./LibOpenJPEG/fix.h  \
  ./LibOpenJPEG/image.h  \
  ./LibOpenJPEG/indexbox_manager.h  \
  ./LibOpenJPEG/int.h  \
  ./LibOpenJPEG/j2k.h  \
  ./LibOpenJPEG/j2k_lib.h  \
  ./LibOpenJPEG/jp2.h  \
  ./LibOpenJPEG/jpt.h  \
  ./LibOpenJPEG/mct.h  \
  ./LibOpenJPEG/mqc.h  \
  ./LibOpenJPEG/openjpeg.h  \
  ./LibOpenJPEG/opj_config.h  \
  ./LibOpenJPEG/opj_includes.h  \
  ./LibOpenJPEG/opj_malloc.h  \
  ./LibOpenJPEG/pi.h  \
  ./LibOpenJPEG/raw.h  \
  ./LibOpenJPEG/t1.h  \
  ./LibOpenJPEG/t1_luts.h  \
  ./LibOpenJPEG/t2.h  \
  ./LibOpenJPEG/tcd.h  \
  ./LibOpenJPEG/tgt.h  \
  ./LibPNG/png.h  \
  ./LibPNG/pngconf.h  \
  ./LibPNG/pngdebug.h  \
  ./LibPNG/pnginfo.h  \
  ./LibPNG/pnglibconf.h  \
  ./LibPNG/pngpriv.h  \
  ./LibPNG/pngstruct.h  \
  ./LibRawLite/internal/defines.h  \
  ./LibRawLite/internal/libraw_bytebuffer.h  \
  ./LibRawLite/internal/libraw_internal_funcs.h  \
  ./LibRawLite/internal/var_defines.h  \
  ./LibRawLite/libraw/libraw.h  \
  ./LibRawLite/libraw/libraw_alloc.h  \
  ./LibRawLite/libraw/libraw_const.h  \
  ./LibRawLite/libraw/libraw_datastream.h  \
  ./LibRawLite/libraw/libraw_internal.h  \
  ./LibRawLite/libraw/libraw_types.h  \
  ./LibRawLite/libraw/libraw_version.h  \
  ./LibTIFF/t4.h  \
  ./LibTIFF/tif_config.h  \
  ./LibTIFF/tif_config.vc.h  \
  ./LibTIFF/tif_config.wince.h  \
  ./LibTIFF/tif_dir.h  \
  ./LibTIFF/tif_fax3.h  \
  ./LibTIFF/tif_predict.h  \
  ./LibTIFF/tiff.h  \
  ./LibTIFF/tiffconf.vc.h  \
  ./LibTIFF/tiffconf.wince.h  \
  ./LibTIFF/tiffio.h  \
  ./LibTIFF/tiffiop.h  \
  ./LibTIFF/tiffvers.h  \
  ./LibTIFF/uvcode.h  \
  ./LibTIFF4/t4.h  \
  ./LibTIFF4/tif_config.h  \
  ./LibTIFF4/tif_config.vc.h  \
  ./LibTIFF4/tif_config.wince.h  \
  ./LibTIFF4/tif_dir.h  \
  ./LibTIFF4/tif_fax3.h  \
  ./LibTIFF4/tif_predict.h  \
  ./LibTIFF4/tiff.h  \
  ./LibTIFF4/tiffconf.h  \
  ./LibTIFF4/tiffconf.vc.h  \
  ./LibTIFF4/tiffconf.wince.h  \
  ./LibTIFF4/tiffio.h  \
  ./LibTIFF4/tiffiop.h  \
  ./LibTIFF4/tiffvers.h  \
  ./LibTIFF4/uvcode.h  \
  ./Metadata/FIRational.h  \
  ./Metadata/FreeImageTag.h  \
  ./OpenEXR/Half/eLut.h  \
  ./OpenEXR/Half/half.h  \
  ./OpenEXR/Half/halfFunction.h  \
  ./OpenEXR/Half/halfLimits.h  \
  ./OpenEXR/Half/toFloat.h  \
  ./OpenEXR/Iex/Iex.h  \
  ./OpenEXR/Iex/IexBaseExc.h  \
  ./OpenEXR/Iex/IexErrnoExc.h  \
  ./OpenEXR/Iex/IexMacros.h  \
  ./OpenEXR/Iex/IexMathExc.h  \
  ./OpenEXR/Iex/IexThrowErrnoExc.h  \
  ./OpenEXR/IlmBaseConfig.h  \
  ./OpenEXR/IlmImf/ImfAcesFile.h  \
  ./OpenEXR/IlmImf/ImfArray.h  \
  ./OpenEXR/IlmImf/ImfAttribute.h  \
  ./OpenEXR/IlmImf/ImfAutoArray.h  \
  ./OpenEXR/IlmImf/ImfB44Compressor.h  \
  ./OpenEXR/IlmImf/ImfBoxAttribute.h  \
  ./OpenEXR/IlmImf/ImfCRgbaFile.h  \
  ./OpenEXR/IlmImf/ImfChannelList.h  \
  ./OpenEXR/IlmImf/ImfChannelListAttribute.h  \
  ./OpenEXR/IlmImf/ImfCheckedArithmetic.h  \
  ./OpenEXR/IlmImf/ImfChromaticities.h  \
  ./OpenEXR/IlmImf/ImfChromaticitiesAttribute.h  \
  ./OpenEXR/IlmImf/ImfCompression.h  \
  ./OpenEXR/IlmImf/ImfCompressionAttribute.h  \
  ./OpenEXR/IlmImf/ImfCompressor.h  \
  ./OpenEXR/IlmImf/ImfConvert.h  \
  ./OpenEXR/IlmImf/ImfDoubleAttribute.h  \
  ./OpenEXR/IlmImf/ImfEnvmap.h  \
  ./OpenEXR/IlmImf/ImfEnvmapAttribute.h  \
  ./OpenEXR/IlmImf/ImfFloatAttribute.h  \
  ./OpenEXR/IlmImf/ImfFrameBuffer.h  \
  ./OpenEXR/IlmImf/ImfFramesPerSecond.h  \
  ./OpenEXR/IlmImf/ImfHeader.h  \
  ./OpenEXR/IlmImf/ImfHuf.h  \
  ./OpenEXR/IlmImf/ImfIO.h  \
  ./OpenEXR/IlmImf/ImfInputFile.h  \
  ./OpenEXR/IlmImf/ImfInt64.h  \
  ./OpenEXR/IlmImf/ImfIntAttribute.h  \
  ./OpenEXR/IlmImf/ImfKeyCode.h  \
  ./OpenEXR/IlmImf/ImfKeyCodeAttribute.h  \
  ./OpenEXR/IlmImf/ImfLineOrder.h  \
  ./OpenEXR/IlmImf/ImfLineOrderAttribute.h  \
  ./OpenEXR/IlmImf/ImfLut.h  \
  ./OpenEXR/IlmImf/ImfMatrixAttribute.h  \
  ./OpenEXR/IlmImf/ImfMisc.h  \
  ./OpenEXR/IlmImf/ImfMultiView.h  \
  ./OpenEXR/IlmImf/ImfName.h  \
  ./OpenEXR/IlmImf/ImfOpaqueAttribute.h  \
  ./OpenEXR/IlmImf/ImfOutputFile.h  \
  ./OpenEXR/IlmImf/ImfPixelType.h  \
  ./OpenEXR/IlmImf/ImfPizCompressor.h  \
  ./OpenEXR/IlmImf/ImfPreviewImage.h  \
  ./OpenEXR/IlmImf/ImfPreviewImageAttribute.h  \
  ./OpenEXR/IlmImf/ImfPxr24Compressor.h  \
  ./OpenEXR/IlmImf/ImfRational.h  \
  ./OpenEXR/IlmImf/ImfRationalAttribute.h  \
  ./OpenEXR/IlmImf/ImfRgba.h  \
  ./OpenEXR/IlmImf/ImfRgbaFile.h  \
  ./OpenEXR/IlmImf/ImfRgbaYca.h  \
  ./OpenEXR/IlmImf/ImfRleCompressor.h  \
  ./OpenEXR/IlmImf/ImfScanLineInputFile.h  \
  ./OpenEXR/IlmImf/ImfStandardAttributes.h  \
  ./OpenEXR/IlmImf/ImfStdIO.h  \
  ./OpenEXR/IlmImf/ImfStringAttribute.h  \
  ./OpenEXR/IlmImf/ImfStringVectorAttribute.h  \
  ./OpenEXR/IlmImf/ImfTestFile.h  \
  ./OpenEXR/IlmImf/ImfThreading.h  \
  ./OpenEXR/IlmImf/ImfTileDescription.h  \
  ./OpenEXR/IlmImf/ImfTileDescriptionAttribute.h  \
  ./OpenEXR/IlmImf/ImfTileOffsets.h  \
  ./OpenEXR/IlmImf/ImfTiledInputFile.h  \
  ./OpenEXR/IlmImf/ImfTiledMisc.h  \
  ./OpenEXR/IlmImf/ImfTiledOutputFile.h  \
  ./OpenEXR/IlmImf/ImfTiledRgbaFile.h  \
  ./OpenEXR/IlmImf/ImfTimeCode.h  \
  ./OpenEXR/IlmImf/ImfTimeCodeAttribute.h  \
  ./OpenEXR/IlmImf/ImfVecAttribute.h  \
  ./OpenEXR/IlmImf/ImfVersion.h  \
  ./OpenEXR/IlmImf/ImfWav.h  \
  ./OpenEXR/IlmImf/ImfXdr.h  \
  ./OpenEXR/IlmImf/ImfZipCompressor.h  \
  ./OpenEXR/IlmImf/b44ExpLogTable.h  \
  ./OpenEXR/IlmThread/IlmThread.h  \
  ./OpenEXR/IlmThread/IlmThreadMutex.h  \
  ./OpenEXR/IlmThread/IlmThreadPool.h  \
  ./OpenEXR/IlmThread/IlmThreadSemaphore.h  \
  ./OpenEXR/Imath/ImathBox.h  \
  ./OpenEXR/Imath/ImathBoxAlgo.h  \
  ./OpenEXR/Imath/ImathColor.h  \
  ./OpenEXR/Imath/ImathColorAlgo.h  \
  ./OpenEXR/Imath/ImathEuler.h  \
  ./OpenEXR/Imath/ImathExc.h  \
  ./OpenEXR/Imath/ImathFrame.h  \
  ./OpenEXR/Imath/ImathFrustum.h  \
  ./OpenEXR/Imath/ImathFrustumTest.h  \
  ./OpenEXR/Imath/ImathFun.h  \
  ./OpenEXR/Imath/ImathGL.h  \
  ./OpenEXR/Imath/ImathGLU.h  \
  ./OpenEXR/Imath/ImathHalfLimits.h  \
  ./OpenEXR/Imath/ImathInt64.h  \
  ./OpenEXR/Imath/ImathInterval.h  \
  ./OpenEXR/Imath/ImathLimits.h  \
  ./OpenEXR/Imath/ImathLine.h  \
  ./OpenEXR/Imath/ImathLineAlgo.h  \
  ./OpenEXR/Imath/ImathMath.h  \
  ./OpenEXR/Imath/ImathMatrix.h  \
  ./OpenEXR/Imath/ImathMatrixAlgo.h  \
  ./OpenEXR/Imath/ImathPlane.h  \
  ./OpenEXR/Imath/ImathPlatform.h  \
  ./OpenEXR/Imath/ImathQuat.h  \
  ./OpenEXR/Imath/ImathRandom.h  \
  ./OpenEXR/Imath/ImathRoots.h  \
  ./OpenEXR/Imath/ImathShear.h  \
  ./OpenEXR/Imath/ImathSphere.h  \
  ./OpenEXR/Imath/ImathVec.h  \
  ./OpenEXR/Imath/ImathVecAlgo.h  \
  ./OpenEXR/OpenEXRConfig.h  \
  ./Plugin.h  \
  ./Quantizers.h  \
  ./ToneMapping.h  \
  ./Utilities.h  \
  ./ZLib/crc32.h  \
  ./ZLib/deflate.h  \
  ./ZLib/gzguts.h  \
  ./ZLib/inffast.h  \
  ./ZLib/inffixed.h  \
  ./ZLib/inflate.h  \
  ./ZLib/inftrees.h  \
  ./ZLib/trees.h  \
  ./ZLib/zconf.h  \
  ./ZLib/zlib.h  \
  ./ZLib/zutil.h

EXTRA_DIST=./LibRawLite/./internal/dcb_demosaicing.c

AM_CPPFLAGS = -I$(top_srcdir)/. -I$(top_srcdir)/Source -I$(top_srcdir)/Source/Metadata -I$(top_srcdir)/Source/FreeImageToolkit -I$(top_srcdir)/Source/LibJPEG -I$(top_srcdir)/Source/LibPNG -I$(top_srcdir)/Source/LibTIFF4 -I$(top_srcdir)/Source/ZLib -I$(top_srcdir)/Source/LibOpenJPEG -I$(top_srcdir)/Source/OpenEXR -I$(top_srcdir)/Source/OpenEXR/Half -I$(top_srcdir)/Source/OpenEXR/Iex -I$(top_srcdir)/Source/OpenEXR/IlmImf -I$(top_srcdir)/Source/OpenEXR/IlmThread -I$(top_srcdir)/Source/OpenEXR/Imath -I$(top_srcdir)/Source/LibRawLite -I$(top_srcdir)/Source/LibRawLite/dcraw -I$(top_srcdir)/Source/LibRawLite/internal -I$(top_srcdir)/Source/LibRawLite/libraw -I$(top_srcdir)/Source/LibRawLite/src

AM_CFLAGS=-fexceptions -fvisibility=hidden -DNO_LCMS

AM_CXXFLAGS=-fexceptions -fvisibility=hidden -Wno-ctor-dtor-privacy
