noinst_PROGRAMS=testAPI
testAPI_SOURCES=MainTestSuite.cpp testChannels.cpp testHeaderOnly.cpp testImageType.cpp testJPEG.cpp testMPage.cpp testMPageMemory.cpp testMPageStream.cpp testMemIO.cpp testPlugins.cpp testThumbnail.cpp testTools.cpp TestSuite.h
testAPI_LDADD=$(top_builddir)/Source/libfreeimage.la
AM_CPPFLAGS=-I$(top_srcdir)/Source
EXTRA_DIST=exif.jpg sample.png
